--- a/.github/workflows/cd-on-push.yml
+++ b/.github/workflows/cd-on-push.yml
@@ -2,12 +2,8 @@ name: 👉 Deploy on push
 
 on:
   # !! Uncomment the following lines once you've set up the dev environment and ready to turn on continuous deployment
-  # push:
-  #   branches: ["main"]
-  # @DEBUG
   push:
-    branches: ["PRP-166-cd-connect-the-infrastructure"]
-
+    branches: ["main"]
 
 jobs:
   check_participant:
