--- a/staff/package.json
+++ b/staff/package.json
@@ -6,6 +6,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "knex": "^2.4.2",
+    "pg": "^8.9.0"
   },
   "devDependencies": {
     "lowdefy": "^3.23.3",
