--- a/staff/package.json
+++ b/staff/package.json
@@ -2,8 +2,10 @@
   "name": "staff_portal",
   "private": true,
   "scripts": {
+    "e2e": "npx playwright test --retries=3",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint ."
   },
   "dependencies": {
     "knex": "^2.4.2",
@@ -11,7 +13,17 @@
   },
   "devDependencies": {
     "lowdefy": "^3.23.3",
+    "@playwright/test": "^1.31.2",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-playwright": "^0.12.0",
+    "playwright-core": "^1.31.2",
     "prettier": "^2.8.4"
   },
-  "prettier": {}
+  "prettier": {},
+  "eslintIgnore": [
+    "/.lowdefy",
+    "/node_modules",
+    "/public"
+  ]
 }
