Deploy infrastructure resources to AWS region us-west-2 and update to current project architecture (#14)
- Change regions from `us-west-1` to `us-west-2`
- Modify the env-template to create 1 database, 1 service cluster, and 3 services
- Update some CI/CD from the [infra template](https://github.com/navapbc/template-infra/tree/3d7724a179da0d13b8a5d981890f428bec6f6005) (cd.yml, Makefile, bin)
- Move IAM module to be called by the `infra/accounts/account/` module
- Break out database resources into separate `infra/modules/database` module
- Break out random password generation into separate `infra/modules/random_password` module
- Break out ECS cluster into separate `infra/modules/service_cluster` module
- Update IAM permissions for `wic-prp-eng` user group
- Rename some variables that were still called `api`

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,31 @@
 name: Deploy
 
 on:
-  push:
-    branches: ["main"]
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      env_name:
+        description: "env_name input"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - staging
+          - prod
+
+env:
+  ENV_NAME: ${{ inputs.env_name || 'dev' }}
+
+# Need to repeat the expression since env.ENV_NAME is not accessible in this context
+concurrency: cd-${{ inputs.env_name || 'dev' }}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
       - uses: actions/checkout@v3
@@ -15,8 +33,15 @@ jobs:
       - name: Build release
         run: make release-build
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          # !! Update the role-to-assume with the GitHub actions role ARN
+          role-to-assume: arn:aws:iam::636249768232:role/wic-prp-github-actions
+          aws-region: us-west-2
+
       - name: Publish release
         run: make release-publish
 
       - name: Deploy release
-        run: make release-deploy
+        run: make release-deploy ENV_NAME="$ENV_NAME"
