[PRP-177] Completed components and page templates, completed component tests, working through linting issues

--- a/participant_portal/tsconfig.json
+++ b/participant_portal/tsconfig.json
@@ -13,7 +13,9 @@
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "tests/*": ["./tests/*"],
+      "stories/*": ["./stories/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
