--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       env_name:
-        description: "env_name input"
+        description: "The environment to deploy to"
         required: true
         default: "dev"
         type: choice
@@ -12,12 +12,30 @@ on:
           - dev
           - staging
           - prod
+      app_name:
+        description: "The app to deploy"
+        required: true
+        default: "participant_portal"
+        type: choice
+        options:
+          - participant_portal
+          - staff_portal
+          - analytics
+  # Designate this as a reusable workflow.
+  # When used as a reusable workflow, this always deploys to the dev environment.
+  # See https://docs.github.com/en/actions/using-workflows/reusing-workflows
+  workflow_call:
+    inputs:
+      app_name:
+        required: true
+        type: string
 
 env:
   ENV_NAME: ${{ inputs.env_name || 'dev' }}
+  APP_NAME: ${{ inputs.app_name || 'participant_portal' }}
 
-# Need to repeat the expression since env.ENV_NAME is not accessible in this context
-concurrency: cd-${{ inputs.env_name || 'dev' }}
+# Need to repeat the expression since env.WHATEVER is not accessible in this context
+concurrency: cd-${{ inputs.env_name || 'dev' }}-${{ inputs.app_name || 'participant_portal' }}
 
 jobs:
   deploy:
@@ -31,7 +49,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build release
-        run: make release-build
+        run: make release-build APP_NAME=$APP_NAME
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -41,7 +59,7 @@ jobs:
           aws-region: us-west-2
 
       - name: Publish release
-        run: make release-publish
+        run: make release-publish APP_NAME=$APP_NAME
 
       - name: Deploy release
-        run: make release-deploy ENV_NAME="$ENV_NAME"
+        run: make release-deploy ENV_NAME="$ENV_NAME" APP_NAME=$APP_NAME
