--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -4,11 +4,11 @@ on:
     branches:
       - main
     paths:
-      - participant_portal/**
+      - participant/**
       - .github/workflows/ci-participant-portal.yml
   pull_request:
     paths:
-      - participant_portal/**
+      - participant/**
       - .github/workflows/ci-participant-portal.yml
 
 jobs:
@@ -28,10 +28,10 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant_portal
+          working-directory: ./participant
 
       - name: 🔬 Lint
-        run: npm --prefix participant_portal run lint
+        run: npm --prefix participant run lint
 
   typecheck:
     name:  ʦ Typecheck
@@ -49,10 +49,10 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant_portal
+          working-directory: ./participant
 
       - name: 🔎 Type check
-        run: npm --prefix participant_portal  run typecheck --if-present
+        run: npm --prefix participant  run typecheck --if-present
 
   format-check:
     name: 🪞 Prettier
@@ -70,10 +70,10 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant_portal
+          working-directory: ./participant
 
       - name: 🥺 Prettier Format Check
-        run: npm --prefix participant_portal run format:check
+        run: npm --prefix participant run format:check
 
   jest:
     name: ⚡ jest
@@ -91,10 +91,10 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant_portal
+          working-directory: ./participant
 
       - name: ⚡ Run jest
-        run: npm  --prefix participant_portal run test -- --coverage
+        run: npm  --prefix participant run test -- --coverage
 
   playwright:
     name: 🎭 Playwright
@@ -112,14 +112,14 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./participant_portal
+          working-directory: ./participant
 
       - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
-        run: find participant_portal/e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
+        run: find participant/e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
 
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
-        working-directory: participant_portal
+        working-directory: participant
