--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -67,11 +67,15 @@ jobs:
         id: prepare-release
         run: make release-prepare PROJECT_NAME=$PROJECT_NAME ENV_NAME=$ENV_NAME APP_NAME=$APP_NAME
 
+      - name: ⏬ Download task definition
+        run: |
+          aws ecs describe-task-definition --task-definition ${{ steps.prepare-release.outputs.service_name }} --query taskDefinition > task-definition.json
+
       - name: ✏️ Fill in the new image ID in the Amazon ECS task definition
         id: render-task-definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ steps.prepare-release.outputs.ecs_task_definition }}
+          task-definition: ./task-definition.json
           container-name: ${{ steps.prepare-release.outputs.container_name }}
           image: ${{ steps.prepare-release.outputs.image }}
 
