--- a/participant/Dockerfile
+++ b/participant/Dockerfile
@@ -2,58 +2,55 @@
 # Base node image with package updates and dependencies
 FROM node:18-slim as base
 # Install openssl for Prisma
-WORKDIR /srv
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
   openssl
+# Set working directory and node user
+WORKDIR /home/node/remix
+RUN chown node:node /home/node/remix
 
 # -------- Image: deps -------- #
 # Install all node_modules, including dev dependencies
 FROM base as deps
-COPY package.json package-lock.json ./
+COPY --chown=node:node package.json package-lock.json ./
 RUN npm install --production=false
 
 # -------- Image: dev -------- #
 # Provide a development image
 FROM base as dev
-COPY --from=deps /srv/node_modules /srv/node_modules
-COPY prisma .
+COPY --from=deps /home/node/remix/node_modules ./node_modules
+COPY --chown=node:node prisma .
 RUN npx prisma generate
-COPY . .
+COPY --chown=node:node . .
 CMD ["npm", "run", "dev:docker"]
 
 # -------- Image: build -------- #
 # Build the app
 FROM base as build
-COPY --from=deps /srv/node_modules /srv/node_modules
-COPY prisma .
+COPY --from=deps /home/node/remix/node_modules /home/node/remix/node_modules
+COPY --chown=node:node prisma .
 RUN npx prisma generate
-COPY . .
+COPY --chown=node:node . .
 RUN npm run css
 RUN npm run build
-
-# -------- Image: test -------- #
-# Provide a test image
-FROM build as test
-ENV NODE_ENV test
-CMD ["npm", "test"]
 
 # -------- Image: production-deps -------- #
 # Setup production node_modules
 FROM base as production-deps
 ENV NODE_ENV production
-COPY --from=deps /srv/node_modules /srv/node_modules
-COPY package.json package-lock.json ./
+COPY --from=deps /home/node/remix/node_modules /home/node/remix/node_modules
+COPY --chown=node:node package.json package-lock.json ./
 RUN npm prune --production
 
 # -------- Image: prod -------- #
 # Finally, build the production image with minimal footprint
 FROM base as prod
 ENV NODE_ENV production
-COPY --from=production-deps /srv/node_modules /srv/node_modules
-COPY --from=build /srv/node_modules/.prisma /srv/node_modules/.prisma
-COPY --from=build /srv/build /srv/build
-COPY --from=build /srv/styles/styles.* /srv/styles/
-COPY --from=build /srv/public/build /srv/public/build
-COPY . .
-CMD ["/srv/bin/prod-start.sh"]
+USER node
+COPY --from=production-deps /home/node/remix/node_modules /home/node/remix/node_modules
+COPY --from=build /home/node/remix/node_modules/.prisma /home/node/remix/node_modules/.prisma
+COPY --from=build /home/node/remix/build /home/node/remix/build
+COPY --from=build /home/node/remix/styles/styles.* /home/node/remix/styles/
+COPY --from=build /home/node/remix/public/build /home/node/remix/public/build
+COPY --chown=node:node . .
+CMD ["/home/node/remix/bin/prod-start.sh"]
