--- a/participant_portal/package.json
+++ b/participant_portal/package.json
@@ -89,6 +89,7 @@
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.17.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-playwright": "^0.12.0",
@@ -112,5 +113,8 @@
   },
   "prisma": {
     "seed": "ts-node  --require tsconfig-paths/register --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  }
+  },
+  "version": "",
+  "readme": "ERROR: No README data found!",
+  "_id": "participant_portal@"
 }
