[PRP-177] Editing buildScriptName

--- a/.github/workflows/cd-chromatic.yml
+++ b/.github/workflows/cd-chromatic.yml
@@ -33,4 +33,4 @@ jobs:
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: participant_portal
+          buildScriptName: "--prefix ./participant_portal build:storybook"
