[PRP-177] Misread the error message

--- a/.github/workflows/cd-chromatic.yml
+++ b/.github/workflows/cd-chromatic.yml
@@ -29,8 +29,11 @@ jobs:
           useLockFile: false
           working-directory: ./participant_portal
 
+      - name: 🖼 Build CSS
+        run: npm  --prefix participant_portal run css
+
       - name: 🖨️ Publish to Chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          buildScriptName: "--prefix ./participant_portal build:storybook"
+          workingDir: participant_portal
