[PRP-177] Updating trigger condition

--- a/.github/workflows/cd-chromatic.yml
+++ b/.github/workflows/cd-chromatic.yml
@@ -43,7 +43,7 @@ jobs:
 
   pull_request_comment:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' }}
+    if: github.event_name == 'pull_request' && github.event.action == 'synchronize'
     needs: chromatic-deployment
     steps:
       - name: 🎯 Post link to build on PR
