--- a/.github/workflows/cd-chromatic.yml
+++ b/.github/workflows/cd-chromatic.yml
@@ -47,4 +47,5 @@ jobs:
           message: |
             Chromatic_Build : Link to [latest build](${{ steps.publish.outputs.buildUrl }}) in Chromatic 🌈
           comment_tag: "Chromatic_Build"
+          mode: recreate
 
