--- a/participant/package.json
+++ b/participant/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "remix build",
     "dev": "run-s dev:startdb css dev:remix",
-    "dev:docker": "npm install && npm run dev:remix",
+    "dev:docker": "npm install && run-s css dev:remix",
     "dev:remix": "remix dev",
     "dev:startdb": "docker compose up postgres --wait && npx prisma db push && npx prisma db seed",
     "css": "run-s css:build css:post",
