--- a/.github/workflows/cd-chromatic.yml
+++ b/.github/workflows/cd-chromatic.yml
@@ -4,8 +4,10 @@
 name: '🌈 Chromatic'
 
 # Event for the workflow
-on: pull_request
-
+on:
+  pull_request:
+    paths:
+      - participant_portal/**
 # List of jobs
 jobs:
   chromatic-deployment:
@@ -46,6 +48,7 @@ jobs:
         with:
           message: |
             Chromatic_Build : Link to [latest build](${{ steps.publish.outputs.buildUrl }}) in Chromatic 🌈
+                              Link to [storybook build](${{ steps.publish.outputs.storybookUrl }}) in Chromatic
           comment_tag: "Chromatic_Build"
           mode: recreate
 
