Rename NEXT_PUBLIC_DEMO_MODE to just PUBLIC_DEMO_MODE.

--- a/participant/.env.example
+++ b/participant/.env.example
@@ -6,4 +6,4 @@
 DATABASE_URL=postgresql://postgres:incredible_local_secret_phrase@127.0.0.1:5432/postgres?schema=public
 POSTGRES_PASSWORD=incredible_local_secret_phrase
 POSTGRES_USER=postgres
-NEXT_PUBLIC_DEMO_MODE=false
+PUBLIC_DEMO_MODE=false
