--- a/.github/workflows/update-playwright-snapshots.yaml
+++ b/.github/workflows/update-playwright-snapshots.yaml
@@ -19,7 +19,7 @@ env:
   APP_NAME: ${{ inputs.app_name || 'participant' }}
 
 # Need to repeat the expression since env.WHATEVER is not accessible in this context
-concurrency: cd-${{ inputs.env_name || 'dev' }}-${{ inputs.app_name || 'participant' }}
+concurrency: cd-${{ github.ref_name }}-${{ inputs.app_name || 'participant' }}
 
 jobs:
   snapshots:
@@ -42,14 +42,14 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./${{ inputs.app_name }}
+          working-directory: ./${{ $APP_NAME }}
 
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: 📸 Take Playwright snapshots 
         run: npx playwright test --update-snapshots
-        working-directory: ${{ inputs.app_name }}
+        working-directory: ${{ $APP_NAME }}
 
       - name: 💾 Save Playwright snapshots
         # Do not allow save to main branch
@@ -58,4 +58,4 @@ jobs:
         with:
           commit_message: Update playwright snapshots
           # Save only snapshots for the selected app
-          file_pattern: '${{ inputs.app_name }}/e2e/*.png'
+          file_pattern: '${{ $APP_NAME }}/e2e/*.png'
