--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -149,14 +149,14 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           useLockFile: false
-          working-directory: ./${{ $APP_NAME }}
+          working-directory: ./$APP_NAME
 
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: 📸 Take Playwright snapshots
         run: npx playwright test --update-snapshots
-        working-directory: ${{ $APP_NAME }}
+        working-directory: $APP_NAME
 
       - name: 💾 Save Playwright snapshots
         # Do not allow save to main branch
@@ -165,4 +165,4 @@ jobs:
         with:
           commit_message: Update playwright snapshots
           # Save only snapshots for the selected app
-          file_pattern: '${{ $APP_NAME }}/e2e/*.png'
+          file_pattern: '$APP_NAME/e2e/*.png'
