--- a/staff/package.json
+++ b/staff/package.json
@@ -2,24 +2,32 @@
   "name": "staff_portal",
   "private": true,
   "scripts": {
+    "dev": "npx lowdefy@3.23.3 dev",
     "e2e": "npx playwright test --retries=3",
+    "e2e:update": "npx playwright test --update-snapshots",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint ."
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "prisma:update": "mkdir -p prisma/migrations && cp -r ../participant/prisma/migrations prisma && cp ../participant/prisma/schema.prisma prisma"
   },
   "dependencies": {
     "knex": "^2.4.2",
     "pg": "^8.9.0"
   },
   "devDependencies": {
-    "lowdefy": "^3.23.3",
+    "@axe-core/playwright": "^4.6.0",
     "@playwright/test": "^1.31.2",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-playwright": "^0.12.0",
+    "lowdefy": "^3.23.3",
     "playwright-core": "^1.31.2",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "prisma": "^4.11.0"
   },
+  "browserslist": [
+    "defaults"
+  ],
   "prettier": {},
   "eslintIgnore": [
     "/.lowdefy",
