--- a/staff/lowdefy.yaml
+++ b/staff/lowdefy.yaml
@@ -1,4 +1,3 @@
-
 lowdefy: 3.23.3
 name: Lowdefy starter
 
@@ -23,7 +22,7 @@ pages:
                   subTitle: We are excited to see what you are going to build
                   icon:
                     name: HeartTwoTone
-                    color: '#f00'
+                    color: "#f00"
                 areas:
                   extra:
                     blocks:
@@ -32,7 +31,7 @@ pages:
                         properties:
                           size: large
                           title: Let's build something
-                          color: '#1890ff'
+                          color: "#1890ff"
                         events:
                           onClick:
                             - id: link_to_docs
@@ -48,4 +47,3 @@ pages:
               type: secondary
               content: |
                 Made by a Lowdefy 🤖
-
