[PRP-238] Add github workflow for manually generating playwright snapshots (#27)
- Create new github action to manually generate linux playwright snapshots
- Modify participant CI github action to output playwright test results if playwright test fails

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -114,12 +114,21 @@ jobs:
           useLockFile: false
           working-directory: ./participant
 
-      - name: 🖨 Copy the Darwin screenshots as Linux (faking it until we make it)
-        run: find participant/e2e -name "*.png" -exec bash -c 'cp "$0" "${0/darwin/linux}"' {} \;
-
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npx playwright test --retries=3
         working-directory: participant
+
+      - name: 🗃 Archive test results
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: participant/test-results
+
+      - name: 🐛 Add debug message
+        if: failure()
+        run: |
+          echo "If this fails, try running the Playwright Snapshots github actions workflow on your branch"
